--- a/manga_db/webGUI/templates/show_entries.html
+++ b/manga_db/webGUI/templates/show_entries.html
@@ -14,11 +14,11 @@
 <div id="searchResult">
 {% if books %}
     {% for book in books %}
-    <div class="book-grid-item-container">
-    <div class="book-grid-item 
-        {% if book.read_status is not none %}
-        {{ 'read' if book.read_status == 0 else ''}} {{ 'reading' if book.read_status > 0 else ''}}
-        {% endif %}">
+    <div class="book-grid-item
+                {% if book.read_status is not none %}
+                {{ 'read' if book.read_status == 0 else ''}} {{ 'reading' if book.read_status > 0 else ''}}
+                {% endif %}">
+    <div class="book-grid-item-cover" title="Tags: {{ book.tag|sort()|join(', ') }}">
     <div class="book-grid-item-inner">
 	    {% if book.favorite %}
 	    <div class="ribbon fav"><span><i class="fas fa-heart"></i></span></div>
@@ -29,42 +29,47 @@
     url_for('main.thumb_static', filename=book.id) }} class="lazyload">
     <div class="overlay">
         <div class="overlay-data">
+            <div class="overlay-artist">
+                {% for artist in book.artist %}
+                    [{{ artist }}]
+                {% endfor %}
+            </div>
             <div class="overlay-title">
-                {{ book.title }}
+                {{ book.title_eng or book.title_foreign }}
             </div>
             <div class="overlay-pages">
                 {{ book.pages }} pages
             </div>
-	    {% if book.my_rating %}
-            <div class="overlay-rate blue-fcolor">
-                {# To cast to a string in an expression, you use x|string() instead of str(x) #}
-                {% for _ in range( book.my_rating|round|int() ) %}
-                {# &#9733; would also works but looks better with Fontawesome #}
-                <span class="fa fa-star"></span>
-                {% endfor %}
-            </div>
-	    {% elif book.ext_infos and book.avg_ext_rating %}
-            <div class="overlay-rate">
-                {% for _ in range( book.avg_ext_rating|round|int() ) %}
-                <span class="fa fa-star"></span>
-                {% endfor %}
-            </div>
-            <span style="font-size: small;">(avg external rating)</span>
-	    {% endif %}
+            {% if book.my_rating %}
+                <div class="overlay-rate blue-fcolor">
+                    {# To cast to a string in an expression, you use x|string() instead of str(x) #}
+                    {% for _ in range( book.my_rating|round|int() ) %}
+                    {# &#9733; would also works but looks better with Fontawesome #}
+                    <span class="fa fa-star"></span>
+                    {% endfor %}
+                </div>
+            {% elif book.ext_infos and book.avg_ext_rating %}
+                <div class="overlay-rate">
+                    {% for _ in range( book.avg_ext_rating|round|int() ) %}
+                    <span class="fa fa-star"></span>
+                    {% endfor %}
+                </div>
+                <span style="font-size: small;">(avg external rating)</span>
+            {% endif %}
         </div>
 	<a href={{ url_for('main.show_info', book_id=book.id) }}  class="overlay-button">
                         SHOW
         </a>
     </div>
 
-    </div> <!-- book-grid-item-inner -->
-    </div> <!-- book-grid-item -->
+    </div> {# book-grid-item-inner #}
+    </div> {# book-grid-item-cover #}
     <div class="book-grid-item-title">
         <span class="title">
             <a href={{ url_for('main.show_info', book_id=book.id) }}>{{ book.title_eng }}</a>
         </span>
     </div>
-    </div> <!-- book-grid-item-container -->
+    </div> {# book-grid-item #}
     
   {% endfor %}
 
