--- a/manga_db/webGUI/templates/edit_info.html
+++ b/manga_db/webGUI/templates/edit_info.html
@@ -26,7 +26,7 @@ $(document).ready(function() {
         event.preventDefault();
         //grab all form data  
         // With XHR2, File upload through AJAX is supported. E.g. through FormData object
-        var form_data = new FormData($(this));//.serialize();
+        var form_data = new FormData(this);//.serialize();
         // add files of input type file to form_data
         form_data.append('file', $('#cover-file')[0].files[0]);
 
