fixed checking collection book for avg_ext_rating (we were checking the book of the main page instead)

--- a/manga_db/webGUI/templates/show_info.html
+++ b/manga_db/webGUI/templates/show_info.html
@@ -598,7 +598,7 @@ info.txt
                 <span class="fa fa-star"></span>
                 {% endfor %}
             </div>
-	    {% elif book.ext_infos and book.avg_ext_rating %}
+	    {% elif c_book.avg_ext_rating is not none %}
             <div class="overlay-rate">
                 {% for _ in range( c_book.avg_ext_rating|round|int() ) %}
                 <span class="fa fa-star"></span>
