fixed one missing semicolon replaced old css framework bootstrap with bulma

--- a/manga_db/webGUI/sass/style.scss
+++ b/manga_db/webGUI/sass/style.scss
@@ -70,7 +70,7 @@ hr {
     justify-content: flex-end;
 }
 .page           { margin: 1rem auto 2rem auto; width: 100%;
-                  padding: 0.8em}
+                  padding: 0.8em; }
 @media only screen and (min-width: 1200px) {
     /* use full screen width on smaller devices but center on 3/4 for desktop */
     .page {
